Movie Detail 70/100 complete

--- a/src/list_movies/index.html
+++ b/src/list_movies/index.html
@@ -27,6 +27,7 @@
         <h2>Popular Movies</h2>
         <ul class="movie-list"></ul>
       </section>
+      <div class="pagination"></div>
     </main>
     <footer>&copy;NOT a real business</footer>
   </body>
