--- a/src/login/index.html
+++ b/src/login/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Detail | Movies</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script type="module" src="../js/movie_detail.js"></script>
+    <script type="module" src="../js/login.js"></script>
   </head>
   <body>
     <header class="divider">
@@ -171,8 +171,17 @@
       </nav>
     </header>
     <main class="main-containeir main-detail">
-      <section class="movie-detail"></section>
-      <div class="trailer-modal"></div>
+        <form action="" method="post">
+            <div>
+                <label for="username"></label>
+                <input type="text" id="username" name="username">
+            </div>
+            <div>
+                <label for=""></label>
+                <input type="text">
+            </div>
+            <a class="sign-up-btn" href="">Sign up</a>
+        </form>
     </main>
     <footer>&copy;NOT a real business</footer>
   </body>
