Add Session with Token

--- a/src/login/index.html
+++ b/src/login/index.html
@@ -173,14 +173,15 @@
     <main class="main-containeir main-detail">
         <form action="" method="post">
             <div>
-                <label for="username"></label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="username">
             </div>
             <div>
-                <label for=""></label>
-                <input type="text">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
             </div>
             <a class="sign-up-btn" href="">Sign up</a>
+            <input type="submit" name="submitLogin" id="submitLogin" value="Login">
         </form>
     </main>
     <footer>&copy;NOT a real business</footer>
