Login finished and complete Movie Detail (80/100)

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
         <a href="/list_movies/index.html">
           <h2>Top Movies</h2>
         </a> 
+        <p class="accountInformation"></p>
+        <button class="logout-btn">Logout</button>
       </section>
     </main>
     <footer>&copy;NOT a real business</footer>
