--- a/src/movie_detail/index.html
+++ b/src/movie_detail/index.html
@@ -162,8 +162,7 @@
       </div>
       <nav>
         <ul>
-          <a href="">
-            <li></li> </a
+          <a href=""> <li></li> </a
           ><a href="">
             <li></li>
           </a>
@@ -173,6 +172,21 @@
     <main class="main-containeir main-detail">
       <section class="movie-detail"></section>
       <div class="trailer-modal"></div>
+      <section class="content-container">
+        <div class="movie-cast-container">
+          <h3 class="div-title">Main Cast</h3>
+          <ol class="movie-cast">
+            <div class="see-more-cast"><a href="">See more </a><span class="arrow">&#8594;</span></div>
+          </ol>
+          <hr>
+        </div>
+        <div class="recommendation-movies-container">
+          <h3 class="div-title">Recommendations</h3>
+          <ol class="recommendation-movies"></ol>
+        </div>
+        <div class="information-movie"></div>
+      </section>
+      
     </main>
     <footer>&copy;NOT a real business</footer>
   </body>
