Add Rating action

--- a/src/movie_detail/index.html
+++ b/src/movie_detail/index.html
@@ -171,7 +171,7 @@
     </header>
     <main class="main-containeir main-detail">
       <section class="movie-detail"></section>
-      <div class="trailer-modal"></div>
+      <div class="modal trailer-modal"></div>
       <section class="content-container">
         <div class="movie-cast-container">
           <h3 class="div-title">Main Cast</h3>
