Add Rating Movie Detail

--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,17 @@
           </svg>
         </div>
         <section class="products">
-          <a href="/list_movies/index.html">
-            <h2>Top Movies</h2>
+          <a href="/list_movies/index.html?category=popular&page=1">
+            <h2>Popular Movies</h2>
+          </a>
+          <a href="/list_movies/index.html?category=now_playing&page=1">
+            <h2>Now Playing Movies</h2>
+          </a>
+          <a href="/list_movies/index.html?category=top_rated&page=1">
+            <h2>Top Rated Movies</h2>
+          </a>
+          <a href="/list_movies/index.html?category=upcoming&page=1">
+            <h2>Upcoming Movies</h2>
           </a>
           <p class="accountInformation"></p>
         </section>
