Fix footer in main page

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,6 @@
         <div class="information-movie"></div>
       </section>
     </main>
-    <footer>&copy;NOT a real business</footer>
+    <footer id="main-footer"></footer>
   </body>
 </html>
